# grapito

./: .gitignore  CMakeLists.txt
.github/workflows/: build-test-deploy.yml  develop-build_test_deployrecipe.yml  main-prepare_release.yml  reusable-main_build.yml  topics-build_test.yml
conan/: conanfile.py
doc/: sprite_animation.drawio
src/: CMakeLists.txt
src/app/compilebox/: CMakeLists.txt
src/app/grapito/: CMakeLists.txt  Configuration.cpp  Configuration.h  Entities.cpp  Game.h  Input.cpp  Input.h  LevelStacks.cpp  LevelStacks.h  Logging.cpp  Logging.h  TopLevelStates.cpp  TopLevelStates.h  Utilities.h  build_info.h.in  main.cpp
src/app/grapito/Animation/: AnimationStateMachine.h  PlayerAnimation.h
src/app/grapito/Components/: AccelAndSpeed.h  AnimatedSprite.h  CameraLimits.h  CameraTag.h  DelayDeletion.h  PlayerData.h  RopeCreator.h  RopeSegment.h  ScreenPosition.h  VisualOutline.h
src/app/grapito/Context/: Localization.cpp  Resources.h
src/app/grapito/DebugGui/: SceneGui.h
src/app/grapito/Scenery/: GameScene.cpp  MenuScene.cpp  MenuScene.h  RopeGame.cpp  RopeGame.h  SplashScene.cpp
src/app/grapito/Systems/: AccelSolver.cpp  CameraGuidedControl.cpp  CameraGuidedControl.h  ControlAnchorSight.cpp  DelayDeleter.cpp  DelayDeleter.h  GrappleCleanup.cpp  GrappleJointCreator.h  LevelGeneration.h  Physics.cpp  Physics.h  PlayerJoin.h  RenderBackground.cpp  RenderBackground.h  RenderToScreen.cpp  SegmentStacker.h  TransitionAnimationState.cpp
src/app/grapito/Systems/Debug/: DirectControl.h
src/app/grapito/Systems/Rules/: CompetitionRule.cpp  CompetitionRule.h  FreesoloRule.cpp  RuleBase.cpp  RuleBase.h
src/app/grapito/TestScenes/: CollisionTest.cpp  DistanceTest.cpp  DistanceTest.h  FrictionTest.cpp  PivotTest.cpp  PivotTest.h  SetPositionTest.cpp  SetPositionTest.h  SimpleCollisionTest.cpp  SimpleCollisionTest.h  WeldTest.cpp  WeldTest.h
src/app/grapito/Utils/: Camera.h  CompositeTransition.h  HomogeneousTransformation.h  MenuControls.h  PhysicsStructs.cpp  PhysicsStructs.h  RopeUtilities.cpp  RopeUtilities.h
src/app/grapkimbo/: CMakeLists.txt  Configuration.cpp  Configuration.h  DebugUI.cpp  DebugUI.h  Entities.cpp  Entities.h  Game.cpp  Game.h  Game_pendulum.cpp  Game_pendulum.h  Input.cpp  Input.h  LevelStacks.cpp  LevelStacks.h  Logging.cpp  Logging.h  Player.cpp  Player.h  Timer.cpp  Timer.h  TopLevelStates.cpp  TopLevelStates.h  Utilities.h  client.html  commons.h  main.cpp
src/app/grapkimbo/Animation/: AnimationStateMachine.cpp  AnimationStateMachine.h  PlayerAnimation.h
src/app/grapkimbo/Components/: AccelAndSpeed.h  AnchorSelector.h  AnimatedSprite.h  Body.h  CameraGuide.h  Controllable.h  DistanceJoint.h  Environment.h  EnvironmentCollisionBox.h  ForceAndSpeed.h  GrappleControl.h  Mass.h  Pendular.h  PivotJoint.h  PlayerData.h  Position.h  RopeCreator.h  ScreenPosition.h  Sound.h  SoundPlayer.h  Text.h  VisualOutline.h  VisualPolygon.h  VisualRectangle.h  VisualSprite.h  Weight.h  WeldJoint.h
src/app/grapkimbo/Components/Debug/: DirectControlTag.h
src/app/grapkimbo/Context/: Context.h  Localization.cpp  Localization.h  PlayerList.cpp  PlayerList.h  Resources.h
src/app/grapkimbo/DebugGui/: SceneGui.h
src/app/grapkimbo/Entities/: Printer.h
src/app/grapkimbo/Ressources/: SoundManager.cpp  SoundManager.h
src/app/grapkimbo/Scenery/: GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  RopeGame.cpp  RopeGame.h  SplashScene.cpp  SplashScene.h  StateMachine.h
src/app/grapkimbo/Systems/: AccelSolver.cpp  AccelSolver.h  CameraGuidedControl.cpp  CameraGuidedControl.h  CompetitionRule.cpp  CompetitionRule.h  ContactConstraintCreation.cpp  ContactConstraintCreation.h  Control.cpp  Control.h  ControlAnchorSight.cpp  ControlAnchorSight.h  DelayDeleter.cpp  DelayDeleter.h  EnvironmentCollision.cpp  EnvironmentCollision.h  FreesoloRule.cpp  FreesoloRule.h  GameRule.cpp  GameRule.h  GrappleCleanup.cpp  GrappleCleanup.h  GrappleInteractions.cpp  GrappleInteractions.h  GrappleJointCreator.cpp  GrappleJointCreator.h  Gravity.cpp  Gravity.h  Hud.cpp  Hud.h  ImpulseSolver.cpp  ImpulseSolver.h  LevelGeneration.cpp  LevelGeneration.h  PendulumSimulation.cpp  PendulumSimulation.h  Physics.cpp  Physics.h  PlayerJoin.cpp  Render.cpp  (+19 more)
src/app/grapkimbo/Systems/Debug/: DirectControl.cpp
src/app/grapkimbo/Systems/Rules/: CompetitionRule.cpp  CompetitionRule.cpp~  CompetitionRule.h  FloorIsLavaRule.cpp  FloorIsLavaRule.h  FreesoloRule.cpp  FreesoloRule.h  Phases.h  RuleBase.h
src/app/grapkimbo/TestScenes/: Collision.cpp  Collision.h  CollisionTest.cpp  CollisionTest.h  DistanceTest.cpp  FrictionTest.cpp  FrictionTest.h  Game_pendulum.cpp  Game_pendulum.h  MassCenter.h  PivotTest.cpp  PivotTest.h  SceneChanger.h  SetPositionTest.cpp  SetPositionTest.h  SimpleCollisionTest.cpp  SimpleCollisionTest.h  WeldTest.cpp  WeldTest.h
src/app/grapkimbo/Utils/: Camera.h  CollisionBox.cpp  CollisionBox.h  CompositeTransition.h  Contact.cpp  Contact.h  DrawDebugStuff.cpp  DrawDebugStuff.h  Grapple.h  HomogeneousTransformation.h  MenuControls.h  PhysicsMathUtilities.h  PhysicsStructs.cpp  PhysicsStructs.h  Player.h  RenderEffect.cpp  RenderEffect.h  RopeUtilities.cpp  RopeUtilities.h  Shape.cpp  Shape.h  SoundUtilities.cpp  SoundUtilities.h  TimeSystemsUpdater.h
src/app/prototypes/grapito-splines/: CMakeLists.txt  Scene.h  main.cpp
